[package]
name = "memuse"
version = "0.1.0"
edition = "2018"
authors = ["Ke Wang <ke.wang.kw754@yale.edu>"]
description = "offers kernel crates the ability to get the physical memory usage of a certain process"
build = "../../build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dependencies.log]
version = "0.4.8"

[dependencies.task]
path = "../task"